# Elastos.Trinity.Alpha.Android

./: .gclient  .gclient_entries  README.md  envsetup.sh
.cipd/: tagcache.db
depot_tools/: .gitattributes
src/: .gitignore  BUILD.gn
src/base/android/java/src/org/chromium/base/library_loader/: LibraryLoader.java  Linker.java
src/base/android/linker/: linker_jni.h
src/chrome/android/java/: AndroidManifest.xml
src/chrome/browser/android/: chrome_entry_point.cc
src/content/browser/frame_host/: render_frame_host_impl.cc
src/content/browser/renderer_host/: render_view_host_impl.cc
src/content/cordova/: BUILD.gn
src/content/cordova/android/: BUILD.gn  cordova_contents_client_bridge.cc  cordova_contents_client_bridge.h  shell_webview.cc  shell_webview.h  shell_webview_jni_registrar.cc  shell_webview_jni_registrar.h  shell_webview_library_loader.cc
src/content/cordova/android/CordovaLib/src/: shell_webview.h
src/content/cordova/android/CordovaLib/src/org/apache/cordova/: CallbackContext.java  CallbackMap.java  ConfigXmlParser.java  CordovaActivity.java  CordovaClientCertRequest.java  CordovaDialogsHelper.java  CordovaInterfaceImpl.java  CordovaWebViewImpl.java  CoreAndroid.java  ICordovaHttpAuthHandler.java  NativeToJsMessageQueue.java  PluginManager.java  ResumeCallback.java
src/content/cordova/android/CordovaLib/src/org/apache/cordova/engine/: .fuse_hidden000c454700000001  CordovaContentsClientBridge.java  ShellWebView.java  ShellWebViewClient.java  ShellWebViewEngine.java  SystemCookieManager.java  SystemWebChromeClient.java
src/content/cordova/android/app/: AndroidManifest.xml.jinja2
src/content/cordova/android/app/assets/www/: index.html
src/content/cordova/android/app/java/org/apache/cordova/whitelist/: WhitelistPlugin.java
src/content/shell/android/: BUILD.gn  shell_library_loader.cc
src/content/shell/browser/: shell_browser_main_parts.cc  shell_javascript_dialog_manager.cc
src/gpu/config/: gpu_lists_version.h
src/ios/chrome/browser/ui/location_bar/: location_bar_coordinator.mm
src/ios/chrome/test/earl_grey/: eg_tests_hook.mm
src/ios/web_view/resources/: web_view_bundle.js
src/native_client/toolchain/.tars/linux_x86/pnacl_newlib/: binutils_x86_x86_64_linux.tgz.json  compiler_rt_bc_i686_bc.tgz.json  compiler_rt_bc_x86_64_bc.tgz.json  core_sdk_libs_arm.tgz.json  core_sdk_libs_le32.tgz.json  core_sdk_libs_x86_64.tgz.json  libcxx_i686_bc.tgz.json  libcxx_le32.tgz.json  libcxx_x86_64.tgz.json  libgcc_eh_mips32.tgz.json  libs_support_arm.tgz.json  libs_support_i686.tgz.json  libs_support_i686_bc.tgz.json  libs_support_translator_arm.tgz.json  libs_support_translator_arm_nonsfi.tgz.json  libs_support_translator_mips32.tgz.json  libs_support_translator_x86_32.tgz.json  libs_support_x86_64.tgz.json  libs_support_x86_64_bc.tgz.json  metadata.tgz.json  newlib_arm.tgz.json  newlib_arm_bc.tgz.json  newlib_i686.tgz.json  newlib_i686_bc.tgz.json  newlib_le32.tgz.json  newlib_x86_64.tgz.json  newlib_x86_64_bc.tgz.json  unsandboxed_runtime_x86_64_linux.tgz.json
src/native_client/toolchain/.tars/linux_x86/pnacl_translator/: sandboxed_translators.tgz.json
src/native_client/toolchain/linux_x86/pnacl_newlib/: REV
src/native_client/toolchain/linux_x86/pnacl_newlib/arm_bc-nacl/lib/: crti.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/docs/llvm/ps/: clang.ps
src/native_client/toolchain/linux_x86/pnacl_newlib/i686_bc-nacl/lib/: crti.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/include/llvm/Config/: config.h  llvm-config.h
src/native_client/toolchain/linux_x86/pnacl_newlib/le32-nacl/lib/: crti.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/lib/: libc++.so.1.0
src/native_client/toolchain/linux_x86/pnacl_newlib/lib/clang/3.7.0/lib/arm_bc-nacl/: crtbegin.bc  sjlj_eh_redirect.bc  unwind_stubs.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/lib/clang/3.7.0/lib/i686_bc-nacl/: crtbegin.bc  sjlj_eh_redirect.bc  unwind_stubs.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/lib/clang/3.7.0/lib/le32-nacl/: crtbegin.bc  sjlj_eh_redirect.bc  unwind_stubs.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/lib/clang/3.7.0/lib/x86_64_bc-nacl/: crtbegin.bc  sjlj_eh_redirect.bc  unwind_stubs.bc
src/native_client/toolchain/linux_x86/pnacl_newlib/pnacl_newlib/: binutils_x86_64_linux.tgz.json  compiler_rt_bc_arm_bc.tgz.json  compiler_rt_bc_le32.tgz.json  core_sdk_libs_i686.tgz.json  core_sdk_libs_mipsel.tgz.json  libcxx_arm.tgz.json  libcxx_arm_bc.tgz.json  libcxx_i686.tgz.json  libcxx_mipsel.tgz.json  libcxx_x86_64_bc.tgz.json  libcxx_x86_64_linux.tgz.json  libgcc_eh_arm.tgz.json  libs_support_arm_bc.tgz.json  libs_support_le32.tgz.json  libs_support_mipsel.tgz.json  libs_support_translator_x86_32_nonsfi.tgz.json  libs_support_translator_x86_64.tgz.json  llvm_x86_64_linux.tgz.json  newlib_mipsel.tgz.json
src/native_client/toolchain/linux_x86/pnacl_newlib/share/info/: binutils.info
src/native_client/toolchain/linux_x86/pnacl_newlib/share/man/man1/: arm-nacl-addr2line.1  arm-nacl-ar.1  arm-nacl-as.1  arm-nacl-ld.1
src/native_client/toolchain/linux_x86/pnacl_newlib/x86_64_bc-nacl/lib/: crti.bc
src/sandbox/linux/seccomp-bpf-helpers/: baseline_policy_android.cc
src/skia/ext/: skia_commit_hash.h
src/testing/buildbot/filters/: mojo.fyi.network_interactive_ui_tests.filter
